--- a/.tekton/glo-grafana-globalhub-1-3-pull-request.yaml
+++ b/.tekton/glo-grafana-globalhub-1-3-pull-request.yaml
@@ -236,9 +236,9 @@ spec:
       taskRef:
         params:
         - name: name
-          value: buildah
+          value: buildah-8gb
         - name: bundle
-          value: quay.io/konflux-ci/tekton-catalog/task-buildah:0.1@sha256:0cb9100452e9640adbda75a6e23d2cc9c76d2408cbcf3183543b2a7582e39f02
+          value: quay.io/redhat-appstudio-tekton-catalog/task-buildah-8gb:0.1
         - name: kind
           value: task
         resolver: bundles
