--- a/.tekton/glo-grafana-globalhub-1-3-push.yaml
+++ b/.tekton/glo-grafana-globalhub-1-3-push.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   params:
   - name: dockerfile
-    value: Dockerfile.ocp
+    value: Containerfile.operator 
   - name: git-url
     value: '{{source_url}}'
   - name: output-image
